Ajout de la partie gestion liste avec la récupération fonctionnelle